--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-bot/__pycache__
-__pycache__
-A-comprehensive-study-of-palladium-based-catalysts-on-different_2024_Biomass.pdf
-test_api.ipynb
-test_gpt.ipynb
+__pycache__*
+*.pdf
+*.ipynb
+*.xlsx
+*.DS_Store
